 - (djm) [atomicio.c configure.ac] Disable poll() fallback in atomiciov for    Tru64. readv doesn't seem to be a comparable object there.    bz#1386, patch from dtucker@ ok me